FINAL FINAL ROUYND FIGHT WAHBDJADBAJODFA

--- a/MyBank-Draft3/AppWindows/Customer/CustomerWindow.xaml
+++ b/MyBank-Draft3/AppWindows/Customer/CustomerWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:MyBank_Draft3.AppWindows.Customer"
         mc:Ignorable="d"
-        Title="Main" Height="700" Width="1200" WindowStartupLocation="CenterScreen" WindowStyle="None" AllowsTransparency="True" Background="Transparent">
+        Title="Main" Height="700" Width="1200" WindowStartupLocation="CenterScreen" WindowStyle="None" AllowsTransparency="True" Background="Transparent" MouseDown="Window_MouseDown">
     <Border CornerRadius="20" Background="#12171d" BorderBrush="Black" >
         <Grid>
             <Grid.ColumnDefinitions>
@@ -50,7 +50,7 @@
                         </WrapPanel>
                     </Button>
 
-                    <Button materialDesign:ButtonAssist.CornerRadius="6" materialDesign:ElevationAssist.Elevation="Dp0" Width="Auto" Height="35" Background="#161d24" BorderBrush="#161d24" Margin="0 300 0 0">
+                    <Button materialDesign:ButtonAssist.CornerRadius="6" materialDesign:ElevationAssist.Elevation="Dp0" Width="Auto" Height="35" Background="#161d24" BorderBrush="#161d24" Margin="0 300 0 0" Click="Button_Click_1">
                         <WrapPanel Width="120">
                             <materialDesign:PackIcon Kind="AccountArrowLeft" VerticalAlignment="Center" Margin="0 0 15 0" Foreground="Red"/>
                             <TextBlock Foreground="Red">Log Out</TextBlock>
